# NRPNHybridization

./: .gitignore  .panfs.fb84a8c0.1663832358371041000  .panfs.fb84a8c0.1713568524310325000  EccHybridization.py  Hybrid.sh  Hybridization.py  Hybridization3plus1D.py  MANIFEST.in  OrbitalEvolutionCodeGen_Q.ipynb  PNApproximants_Q.py  PNApproximants_Q1.py  PNBMS.py  PNCodeGen.ipynb  PNCodeGenClass.ipynb  PNEvolution.py  PNEvolutionClass.py  PNEvolutionDict.py  PNWaveformModes.py  PNWaveformModes_py.py  README.md  SpinSpin_4p0_terms.nb  TestPN.ipynb  pyproject.toml  test_spin_modulations.py  test_vs_lal.py
EccPostNewtonian/Code/: PNCodeGen.ipynb  PNCodeGenPsiM.ipynb  PNEvolution.py  PNPsiMModes.py  PNWaveformModes.py  PostNewtonian.py
EccPostNewtonian/PNTerms/: BindingEnergy.ipynb  Flux.ipynb  Precession.ipynb  Variables_Q.ipynb
PNTerms/: OrbitalEvolution.ipynb  Variables_Q.ipynb
PYPostNewtonian/: README.md
PYPostNewtonian/Code/: PNCodeGen.ipynb  PNCodeGenPsi2.ipynb  PNCodeGenPsiM.ipynb  PNEvolution.py  PNPsiMModes.py  PNWaveformModes.py  PostNewtonian.py  README.md
PYPostNewtonian/PNPsi2/: WaveformModes.ipynb
PYPostNewtonian/PNTerms/: AngularMomentum.ipynb  BindingEnergy.ipynb  EnergyAbsorption.ipynb  Flux.ipynb  Mma_To_Py.ipynb  OrbitalEvolution.ipynb  Precession.ipynb  PsiMModes.ipynb  README.md  Variables.ipynb  Variables_Q.ipynb  WaveformModes.ipynb
PaperPlots/: paper.mplstyle
Utilities/: CodeOutput.py
docs/: PN_GENERATION.md  STRUCTURE.md
scripts/: notebook_source_hashes.py  regenerate_pn_code.py  strip_notebook_outputs.py
(+132 files in other folders)
